bug for greeting solved

--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
-    <script src="./script/summary.js"></script>
     <title>Summary</title>
 </head>
 
@@ -268,10 +267,8 @@
 
         </main>
 
-        <section onclick="stopPropagation(event)" class="animated-overlay-background d_none"
-            id="animated-overlay-parent">
-            <div class="animated-overlay o.0" id="animated_overlay_id">
-            </div>
+        <section onclick="stopPropagation(event)" class="animated-overlay-background d_none" id="animated-overlay-parent">
+            <div class="animated-overlay o.0" id="animated_overlay_id"></div>
         </section>
     </section>
 
@@ -280,6 +277,7 @@
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/menu_dropdown.js"></script>
+    <script src="./script/summary.js"></script>
 </body>
 
 </html>
