new files for better category

--- a/board.html
+++ b/board.html
@@ -269,6 +269,9 @@
     <script src="./script/menu_dropdown.js"></script>
     <script src="./script/board_addtask_template.js"></script>
     <script src="./script/edit_task.js"></script>
+    <script src="./script/task_overlay.js"></script>
+    <script src="./script/task_overlay_temp.js"></script>
+    <script src="./script/board_temp.js"></script>
 </body>
 
 </html>
