change the main tag from the summary-main section in section tag

--- a/summary.html
+++ b/summary.html
@@ -154,7 +154,7 @@
                 </div>
             </header>
 
-            <main class="summary-main">
+            <section class="summary-main">
                 <header class="summary-header2">
                     <h2>Join 360</h2>
                     <div></div>
@@ -263,7 +263,7 @@
 
                 </section>
 
-            </main>
+            </section>
 
         </main>
 
