edit class for subtasks

--- a/add_task.html
+++ b/add_task.html
@@ -374,7 +374,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="h-80" onclick="event.stopPropagation()">
+                            <div class="subtasks-container" onclick="event.stopPropagation()">
                                 <label for="add_task_subtasks" class="add-task-assigned-to-category-label">
                                     <p>Subtasks</p>
                                     <input id="add_task_subtasks"
