--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="screen-orientation" content="portrait">
     <title>Join</title>
     <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
 
@@ -67,7 +68,7 @@
                 <section class="email_input_section">
                     <form class="email_input" id="input_email">
                         <label for="input_email">
-                            <input class="email_input" type="text" id="email" name="Email"  placeholder="Email">
+                            <input class="email_input" type="text" id="email" name="Email" placeholder="Email">
                             <svg class="email_icon" xmlns="http://www.w3.org/2000/svg" width="20" height="16"
                                 viewBox="0 0 20 16" fill="none">
                                 <path
@@ -83,7 +84,7 @@
 
                     <form action="password_input" class="password_input" id="password_input_id">
                         <label for="password_input_id">
-                            <input class="password_input" type="password" id="password" name="password" 
+                            <input class="password_input" type="password" id="password" name="password"
                                 placeholder="Password">
                             <div id="toggle_password_visibility_button">
                                 <svg class="password_lock_icon" xmlns="http://www.w3.org/2000/svg" width="16"
