--- a/board.html
+++ b/board.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="screen-orientation" content="portrait">
     <title>Board</title>
     <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
     <link rel="stylesheet" href="./style/style.css" />
