--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@
     <title>Contacts</title>
 </head>
 
-<body class="contacts-body" onload="initContacts()">
+<body class="contacts-body" onload="initContacts() ; initAuthGuard();">
     <section class="layout">
         <section id="overlay_contacts" class="overlay-contacts d_none" onclick="closeResponsiveContactEditMenu()">
             <div id="overlay_contacts_content" class="overlay-shadow-pos-rel-container">
