--- a/summary.html
+++ b/summary.html
@@ -10,7 +10,7 @@
     <title>Summary</title>
 </head>
 
-<body onload="summaryInit()">
+<body onload="summaryInit() ; initAuthGuard();">
     <section class="layout">
 
         <nav class="navbar">
