--- a/board.html
+++ b/board.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body onload="boardInit()">
+<body onload="boardInit() ; initAuthGuard();">
 
     <div class="layout">
         <nav class="navbar">
