added function if no user logged in onload

--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 
-<body class="help" onload="rederProfilHeaderIcon('profil_header_help')">
+<body class="help" onload="rederProfilHeaderIcon('profil_header_help') ; initAuthGuard();">
   <div class="layout">
     <nav class="navbar">
       <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
