disabled autocapitalize for email inputs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <section class="email_input_section">
                     <form class="email_input" id="input_email">
                         <label for="input_email">
-                            <input class="email_input" type="text" id="email" name="Email" placeholder="Email">
+                            <input class="email_input" type="text" id="email" name="Email" placeholder="Email" autocapitalize="none">
                             <svg class="email_icon" xmlns="http://www.w3.org/2000/svg" width="20" height="16"
                                 viewBox="0 0 20 16" fill="none">
                                 <path
