code optimized in board.js

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -150,14 +150,14 @@
         <div class="instructions">
           <h3 class="mb16">Imprint</h3>
           <p class="mb16">
-            Sven Degen <br />
+            Furkan Yigit <br />
             Ifenthalerstrasse 30 <br />
-            CH - 4463 Hauenstein
+            DE- 95028 Hof
           </p>
 
           <h3>Exploring the Board</h3>
           <p class="mb16">
-            email: <a href="mailto:sven.degen1998@gmail.com"></a>
+            email: <a href="mailto:furkanyigit2000@gmail.com" style="color: #0067f8;">furkanyigit2000@gmail.com</a>
           </p>
           <h3>Acceptance of terms</h3>
           <p class="mb16">
