changed strukture of files

--- a/board.html
+++ b/board.html
@@ -261,8 +261,9 @@
     <div class="dialog" id="task-dialog"></div>
 
     <script src="./script/template.js"></script>
-    <script src="./script/add_task.js"></script>
     <script src="./script/add_task_templates.js"></script>
+    <script src="./script/add_task_contacts_subtasks.js"></script>
+    <script src="./script/add_task.js"></script>
     <script src="./script/board.js"></script>
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
