--- a/add_task.html
+++ b/add_task.html
@@ -464,6 +464,7 @@
     </div>
 
     <script src="./script/add_task_templates.js"></script>
+    <script src="./script/add_task_contacts_subtasks.js"></script>
     <script src="./script/add_task.js"></script>
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
