delete contact overlay

--- a/legal_notice_from_login.html
+++ b/legal_notice_from_login.html
@@ -52,7 +52,7 @@
       </ul>
     </nav>
     <main>
-      <header class="main-header h_96">
+      <header class="main-header h_96 h_80">
         <div class="content-limit-header">
           <svg width="32" height="40" viewBox="0 0 32 40" fill="none">
             <path d="M22.927 0.492188H15.8389V8.64696H22.927V0.492188Z" fill="#2A3647" />
@@ -78,7 +78,7 @@
               </svg>
             </a>
 
-            <div id="profil_header_legal_notice" class="profil-header" onclick="toggleBurgerMenu()"></div>
+            <div id="profil_header_privacy_policy" class="profil-header" onclick="toggleBurgerMenu()"></div>
 
             <div class="nav-profile-container" id="profile-menu">
               <div class="nav-profile-link-container">
@@ -90,6 +90,7 @@
                 </ul>
               </div>
             </div>
+
           </div>
         </div>
       </header>
@@ -99,14 +100,14 @@
         <div class="instructions">
           <h3 class="mb16">Imprint</h3>
           <p class="mb16">
-            Sven Degen <br />
+            Furkan Yigit <br />
             Ifenthalerstrasse 30 <br />
-            CH - 4463 Hauenstein
+            DE- 95028 Hof
           </p>
 
           <h3>Exploring the Board</h3>
           <p class="mb16">
-            email: <a href="mailto:sven.degen1998@gmail.com"></a>
+            email: <a href="mailto:furkanyigit2000@gmail.com" style="color: #0067f8;">furkanyigit2000@gmail.com</a>
           </p>
           <h3>Acceptance of terms</h3>
           <p class="mb16">
