--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,10 @@
 
             </div>
         </section>
+        <section class="delete-contact d_none" id="delete-contact" onclick="stopPropagation(event)">
+            <p>Delete Contact?</p>
+            <div class="delete-contact-answer" id="delete-contact-answer"></div>
+        </section>
         <nav class="navbar">
             <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
                 <path d="M72.6549 0H50.4971V25.4923H72.6549V0Z" fill="white" />
