text changes in privacy policy

--- a/privacy_policy_from_login.html
+++ b/privacy_policy_from_login.html
@@ -244,8 +244,7 @@
 
         <h3 class="mb32" id="11">HOW CAN YOU REVIEW, UPDATE, OR DELETE YOUR DATA?</h3>
         <p class="mb80">
-          You can request access, correction, deletion, or withdraw consent. To submit a request, visit
-          <span style="color:darkblue;font-weight:700">./help.html</span> or contact us via the email above.
+          You can request access, correction, deletion, or withdraw consent. To submit a request, contact us via the email above.
         </p>
       </section>
 
