fixed label issue

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
                 <section class="email_input_section">
                     <form class="email_input" id="input_email">
-                        <label for="input_email">
-                            <input class="email_input" type="text" id="email" name="Email" placeholder="Email" autocapitalize="none">
+                        <label for="email">
+                            <input class="email_input" type="text" id="email" name="Email" placeholder="Email">
                             <svg class="email_icon" xmlns="http://www.w3.org/2000/svg" width="20" height="16"
                                 viewBox="0 0 20 16" fill="none">
                                 <path
@@ -83,7 +83,7 @@
                 <section class="password_input_section">
 
                     <form action="password_input" class="password_input" id="password_input_id">
-                        <label for="password_input_id">
+                        <label for="password">
                             <input class="password_input" type="password" id="password" name="password"
                                 placeholder="Password">
                             <div id="toggle_password_visibility_button">
