--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body onload="logInInit()">
 
     <section class="overlay_animation">
+        <div class="animation_background"></div>
         <div class="animation_join_logo">
             <svg xmlns="http://www.w3.org/2000/svg" width="274" height="335" viewBox="0 0 274 335" fill="none">
                 <path d="M196.314 0H135.623V69.8251H196.314V0Z" class="logo_color" />
@@ -43,10 +44,6 @@
 
     <main id="main" class="login_page">
         <!-- Log In and Sign Up will be render here -->
-
-        <section id="main_header">
-            <!-- The join logo will be rendered here -->
-        </section>
 
         <section class="sign_up_header">
             <p>Not a Join user?</p>
