fixed input issues

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 
                     <form action="password_input" class="password_input" id="password_input_id">
                         <label for="password">
-                            <input class="password_input" type="password" id="password" name="password"
-                                placeholder="Password" autocomplete="new-password">
+                            <input class="password_input" type="password" id="password" name="password" placeholder="Password" autocomplete="new-password">
                             <div id="toggle_password_visibility_button">
                                 <svg class="password_lock_icon" xmlns="http://www.w3.org/2000/svg" width="16"
                                     height="21" viewBox="0 0 17 22" fill="none">
