added checkRequiredInputs() and removeRequiredMsgByLenght

--- a/add_task.html
+++ b/add_task.html
@@ -172,7 +172,7 @@
                                 <div class="add-tast-form-input-required-container">
                                     <input id="add_task_title" type="text"
                                         class="w-100 add-task-form-left-title-input add-task-form-input-placeholder-default"
-                                        placeholder="Enter a Title" onfocus="highlightInputFields('add_task_title')" maxlength="40" >
+                                        placeholder="Enter a Title" onfocus="highlightInputFields('add_task_title')" maxlength="40" onkeyup="checkRequiredInputs('add_task_title')">
                                     <div class="h-16">
                                         <p id="required_msg_title" class="required-msg d_none">This field
                                             is required</p>
@@ -211,7 +211,7 @@
                                             class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-default"
                                             type="date" placeholder="dd/mm/yyyy"
                                             onclick="openCalender('add_task_due_date')"
-                                            onfocus="highlightInputFields('add_task_due_date')">
+                                            onfocus="highlightInputFields('add_task_due_date')" onchange="checkRequiredInputs('add_task_due_date')">
                                     </div>
                                     <svg class="add-task-due-date-label-calender-svg" xmlns="http://www.w3.org/2000/svg"
                                         width="24" height="24" viewBox="0 0 24 24" fill="none">
