--- a/add_task.html
+++ b/add_task.html
@@ -297,12 +297,12 @@
                             <div id="add_task_form_assigned_to_section" class="add-task-form-assigned-to-section h-80"
                                 onclick="event.stopPropagation()">
                                 <label for="add_task_assigned_to" class="add-task-assigned-to-category-label"
-                                    onclick="toggleAssignedToContactList()" onkeyup="filterInputValue()">
+                                   >
                                     <p>Assigned to</p>
                                     <input id="add_task_assigned_to"
                                         class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
-                                        type="text" onfocus="highlightInputFields('add_task_assigned_to')"
-                                        placeholder="Select contacts to assign" readonly>
+                                        type="text" onfocus="highlightInputFields('add_task_assigned_to')" onkeyup="filterInputValue()"  onclick="toggleAssignedToContactList()"
+                                        placeholder="Select contacts to assign">
                                     <div id="add_task_form_assigned_to_arrow_svg"
                                         class="add-task-form-assigned-to-arrow-down-svg"
                                         onclick="event.stopPropagation()">
@@ -332,7 +332,7 @@
                             </div>
                             <div class="add-task-form-assigned-to-section h-80" onclick="event.stopPropagation()">
                                 <label for="add_task_category" class="add-task-assigned-to-category-label"
-                                    onclick="toggleCategoryList()">
+                                    >
                                     <div class="add-task-required-label-head">
                                         <p>Category</p>
                                         <p class="add-task-form-required">*</p>
@@ -340,7 +340,7 @@
                                     <input id="add_task_category"
                                         class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
                                         type="text" placeholder="Select task category"
-                                        onfocus="highlightInputFields('add_task_category')" readonly>
+                                        onfocus="highlightInputFields('add_task_category')" readonly onclick="toggleCategoryList()">
                                     <div id="add_task_form_category_arrow_svg"
                                         class="add-task-form-assigned-to-arrow-down-svg"
                                         onclick="event.stopPropagation()">
