--- a/legal_notice_from_login.html
+++ b/legal_notice_from_login.html
@@ -13,7 +13,7 @@
 
 <body class="help" onload="rederProfilHeaderIcon('profil_header_legal_notice')">
   <div class="layout">
-    <nav class="navbar">
+    <nav class="navbar-without-login">
       <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
         <path d="M72.6549 0H50.4971V25.4923H72.6549V0Z" fill="white" />
         <path
@@ -28,9 +28,9 @@
           d="M91.3188 118.593V104.76H94.046L96.9776 110.461C97.7323 111.952 98.4038 113.483 98.9889 115.049C98.8355 113.337 98.7673 111.368 98.7673 109.177V104.76H101.017V118.593H98.4775L95.5118 112.772C94.7266 111.243 94.0267 109.671 93.4153 108.064C93.4153 109.776 93.5346 111.711 93.5346 114.09V118.576L91.3188 118.593Z"
           fill="white" />
       </svg>
-      <ul class="nav-list j_c_start">
+      <ul class="nav-list-without-login">
         <li>
-          <a class="navbar-link " href="./index.html">
+          <a class="navbar-link-without-login" href="./index.html">
             <div class="category-logo flex_center">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path
@@ -42,12 +42,12 @@
           </a>
         </li>
       </ul>
-      <ul class="navbar-footer">
+      <ul class="navbar-footer-without-login">
         <li>
-          <a class="navbar-footer-link" href="./privacy_policy_from_login.html">Privacy Policy</a>
+          <a class="navbar-footer-without-login-link" href="./privacy_policy_from_login.html">Privacy Policy</a>
         </li>
         <li class="navbar-active">
-          <a class="navbar-footer-link" href="./legal_notice_from_login.html">Legal Notice</a>
+          <a class="navbar-footer-without-login-link" href="./legal_notice_from_login.html">Legal Notice</a>
         </li>
       </ul>
     </nav>
