--- a/contacts.html
+++ b/contacts.html
@@ -227,6 +227,7 @@
     <script src="./script/contacts_create_edit.js"></script>
     <script src="./script/contact.js"></script>
     <script src="./script/script.js"></script>
+    <script src="./script/user_managment.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/menu_dropdown.js"></script>
