--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/script.js"></script>
+    <script src="./script/user_managment.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/firebase_examples.js"></script>
 
