--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -305,6 +305,7 @@
   <script src="./script/guestlogin.js"></script>
   <script src="./script/login.js"></script>
   <script src="./script/script.js"></script>
+  <script src="./script/user_managment.js"></script>
   <script src="./script/menu_dropdown.js"></script>
 </body>
 
