--- a/summary.html
+++ b/summary.html
@@ -276,6 +276,7 @@
 
     <script src="./script/template.js"></script>
     <script src="./script/script.js"></script>
+    <script src="./script/user_managment.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/menu_dropdown.js"></script>
