--- a/add_task.html
+++ b/add_task.html
@@ -466,6 +466,7 @@
     <script src="./script/add_task_templates.js"></script>
     <script src="./script/add_task_contacts_subtasks.js"></script>
     <script src="./script/add_task.js"></script>
+    <script src="./script/add_task_ui.js"></script>
     <script src="./script/script.js"></script>
     <script src="./script/user_managment.js"></script>
     <script src="./script/guestlogin.js"></script>
