Optimised contact.js functions. Outsourced to contact_ui.js.

--- a/contacts.html
+++ b/contacts.html
@@ -226,6 +226,7 @@
     <script src="./script/contact_templates.js"></script>
     <script src="./script/contacts_create_edit.js"></script>
     <script src="./script/contact.js"></script>
+    <script src="./script/contact_ui.js"></script>
     <script src="./script/script.js"></script>
     <script src="./script/user_managment.js"></script>
     <script src="./script/guestlogin.js"></script>
